home page spacing and issue page cut offs

--- a/src/styles/issue.scss
+++ b/src/styles/issue.scss
@@ -38,6 +38,8 @@
   font: 20px $sans;
   line-height: 140%;
   padding-top: 5px;
+  height: 10px;
+  overflow: ellipsis;
 }
 
 #tag {
